[tool.poetry]
name = "capes-bdt-fetcher"
version = "0.1.0"
description = "Data fetcher of CAPES' Catálogo de Teses e Dissertações"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
